conf/traefik/traefik-middleware.yaml
---
# Redirect to https
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: my-fail2ban
#    namespace: my-namespace
spec:
    plugin:
        fail2ban:
            allowlist:
                ip:
                  - "::1"
                  - "127.0.0.1"
                  - "192.168.50.0/23"
            rules:
                bantime: 3h
                enabled: "true"
                findtime: 10m
                maxretry: "4"
                statuscode: 400,401,403-499

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: my-traefik-warp
spec:
    plugin:
        traefik-warp:
            provider: auto
            autoRefresh: true
            refreshInterval: 24h
            debug: false
            # trustIp:                # optional: extend allow-lists
            #   cloudflare:
            #     - "198.51.100.0/24"
            #   cloudfront:
            #     - "203.0.113.0/24"

# https://github.com/l4rm4nd/traefik-warp

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: idcrook-dev-wildcard-fallback-redirect
  # namespace: default
spec:
  redirectRegex:
    # Captures everything before the apex domain to ensure it drops the subdomain
    regex: "^https?://([^.]+)\\.idcrook\\.dev(.*)"
    # Redirects to the main apex www subdomain
    replacement: "https://www.idcrook.dev${2}"
    permanent: false


# See tinyauth.yaml for its middleware
