conf/traefik/traefik-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: default
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet      
      nodeSelector:
        kubernetes.io/hostname: "rpiv1"
      containers:
        - image: traefik:v3.7.9
          name: traefik
          volumeMounts:
            - mountPath: "/config"
              name: "config"
            - mountPath: "/authfile"
              name: "authfile"
            - mountPath: "/acme/acme.json"
              name: "acme"
            - mountPath: "/acme/acme-wc.json"
              name: "acme-wc"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: ssh
              containerPort: 2222
          args:
            - --configfile=/config/traefik.toml
      volumes:
        - name: config
          configMap:
            name: traefik-config
        - name: authfile
          configMap:
            name: traefik-htpasswd
        - name: acme
          hostPath:
            type: File
            path: /srv/configs/acme/acme.json
        - name: acme-wc
          hostPath:
            type: File
            path: /srv/configs/acme/acme-wc.json
