conf/traefik/prometheus.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus

spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
    nodePort: 30909

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus

spec:
  selector:
    matchLabels:
      app: prometheus
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        #image: prom/prometheus:v2.1.0
        image: prom/prometheus:v2.53.4
        ports:
        - containerPort: 9090
          name: default
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus
      volumes:
      - name: config-volume
        configMap:
         name: prometheus-config
