conf/traefik/traefik-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: default
spec:
  type: NodePort
  # externalIPs:
  #   - 192.168.50.5
  externalTrafficPolicy: Local
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
    # - protocol: TCP
    #   name: admin
    #   port: 8080
    - protocol: TCP
      port: 443
      name: websecure
    - protocol: TCP
      port: 2222
      name: ssh
