conf/traefik/tinyauth.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tinyauth

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyauth
  labels:
    app: tinyauth
  namespace: tinyauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyauth
  template:
    metadata:
      labels:
        app: tinyauth
    spec:
      serviceAccountName: tinyauth-sa
      containers:
        - name: tinyauth
          image: ghcr.io/tinyauthapp/tinyauth:v5.1.2
          ports:
            - containerPort: 3000
              name: tinyauth-cip
              protocol: TCP            
          volumeMounts:
            - mountPath: "/authfile"
              name: "authfile"
            - mountPath: "/data"
              name: "session-db"
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: tinyauth-cip
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: tinyauth-cip
      volumes:
          - name: authfile
            configMap:
              name: tinyauth-users-file
          - name: session-db
            # effectively: resets each restart
            emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: tinyauth-svc
  namespace: tinyauth
spec:
  ports:
    - name: tinyauth-cip
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: tinyauth
  type: ClusterIP

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: tinyauth-middleware
    namespace: tinyauth
spec:
    forwardAuth:
        address: http://tinyauth-svc.tinyauth.svc.cluster.local:3000/api/auth/traefik
        #address: http://tinyauth-svc:3000/api/auth/traefik
        maxResponseBodySize: 1048576
        trustForwardHeader: true 
        authResponseHeaders:
            - authorization
            - X-Forwarded-User        
            - remote-user
            - remote-groups
            - remote-email
            - remote-name
# to use this middleware from default namespace
#         - name: tinyauth-tinyauth-middleware@kubernetescrd

# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: http-redirect-tinyauth
# spec:
#   entryPoints:
#     - web
#   routes:
#     - kind: Rule
#       match: Host(`tinyauth.idcrook.dev`)
#       services:
#         - name: tinyauth-svc
#           namespace: tinyauth
#           port: 3000
#       middlewares:
#         - name: redirect-to-https

# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: https-tinyauth
#   # this is in default namespace for traefik
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - kind: Rule
#       match: Host(`tinyauth.idcrook.dev`)
#       services:
#         - name: tinyauth-svc
#           namespace: tinyauth
#           port: 3000
#   tls:
#     certResolver: wildcardresolver

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinyauth-ingress
  namespace: tinyauth
  annotations:
    # kubernetes.io/ingress.class: traefik  
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: |
      default-redirect-to-https@kubernetescrd  

spec:
  # ingressClassName: traefik
  rules:
    - host: tinyauth.idcrook.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: tinyauth-svc
                port:
                  number: 3000
